# ocaml-workspace

./: dune-workspace
bar/: dune-project
bar/lib/: dune  libBar.ml
bar/test/: dune
foo/: dune-project  foo.opam
foo/test/: dune
